# chat-with-your-data

./: pyproject.toml
src/chat_with_your_data/: chat.py  shared.py
tests/: test_my_app.py
